--- a/gb/20/4/21/n12049061.md
+++ b/gb/20/4/21/n12049061.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uszn2172/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uszn2172/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uszn2172/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uszn2172/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uszn2172/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uszn2172/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uszn2172/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uszn2172/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/uszn2172/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uszn2172/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uszn2172/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uszn2172/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uszn2172/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>工资补贴是否被滥用</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年04月21日讯】<span style="font-weight: 400;">（大纪元记者赵凯<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E7%BA%B3%E7%A8%8E%E4%BA%BA.md#1">纳税人</a>资助的<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84%E8%A1%A5%E8%B4%B4.md#1">工资补贴</a>是否被<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E6%BB%A5%E7%94%A8.md#1">滥用</a>？针对越来越多的质疑声，财政部长格兰特·罗伯逊（Grant Robertson）回应称，相信大多数<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E4%BC%81%E4%B8%9A.md#1">企业</a>没有不诚实行为。</span></p>
-<p><span style="font-weight: 400;">“我们对绝大多数<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a><ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E4%BC%81%E4%B8%9A.md#1">企业</a>有信心，相信他们会做正确的事。这些企业将用该补贴支付员工薪水。任何<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E6%BB%A5%E7%94%A8.md#1">滥用</a>该制度的企业，我们都会追查。”罗伯逊说。</span></p>
+<p>【大纪元2020年04月21日讯】<span style="font-weight: 400;">（大纪元记者赵凯<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>编译报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BA%B3%E7%A8%8E%E4%BA%BA.md#1">纳税人</a>资助的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84%E8%A1%A5%E8%B4%B4.md#1">工资补贴</a>是否被<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BB%A5%E7%94%A8.md#1">滥用</a>？针对越来越多的质疑声，财政部长格兰特·罗伯逊（Grant Robertson）回应称，相信大多数<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%81%E4%B8%9A.md#1">企业</a>没有不诚实行为。</span></p>
+<p><span style="font-weight: 400;">“我们对绝大多数<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%81%E4%B8%9A.md#1">企业</a>有信心，相信他们会做正确的事。这些企业将用该补贴支付员工薪水。任何<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BB%A5%E7%94%A8.md#1">滥用</a>该制度的企业，我们都会追查。”罗伯逊说。</span></p>
 <h2>争议焦点</h2>
-<p><span style="font-weight: 400;">目前争议较大的是肉类加工行业，肉类加工属于基本服务业，在封锁期间可以营业，该行业中一些公司申请了总计8400万纽币的<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84%E8%A1%A5%E8%B4%B4.md#1">工资补贴</a>。</span></p>
+<p><span style="font-weight: 400;">目前争议较大的是肉类加工行业，肉类加工属于基本服务业，在封锁期间可以营业，该行业中一些公司申请了总计8400万纽币的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B7%A5%E8%B5%84%E8%A1%A5%E8%B4%B4.md#1">工资补贴</a>。</span></p>
 <p><span style="font-weight: 400;">批评人士称，不应该给肉类企业提供工资补贴，这类企业仍在营业，而且目前肉类市场价格坚挺，本季度最不可能亏损的行业就是肉类企业了。</span></p>
 <h2>领取工资补贴的资格</h2>
 <p><span style="font-weight: 400;">一个主要的新西兰企业负责人说：“企业只要6个月中有1个月收入减少或预计减少30%，就有资格申请工资补贴。”</span></p>
@@ -28,7 +28,7 @@
 <h2>企业是真正的亏损还是暂时收入延迟</h2>
 <p><span style="font-weight: 400;">但是业内批评人士认为由于封锁引起的产量降低与企业本身的营收降低不是一回事。</span></p>
 <p><span style="font-weight: 400;">一位不愿透露姓名的人士说：“工资补贴计划的目的是解决收入损失问题。疫情安全措施可能会限制企业的生产能力，但这只会导致营收收入延迟而不会导致营收损失。”</span></p>
-<p><span style="font-weight: 400;">一位批评人士指出，肉类行业有季节性，较低的营业额确实会导致较高的成本，但影响是轻微的，不应该由<ahref="https://github.com/uszn2172/djy/blob/master/gb/tag/%E7%BA%B3%E7%A8%8E%E4%BA%BA.md#1">纳税人</a>来买单。</span></p>
+<p><span style="font-weight: 400;">一位批评人士指出，肉类行业有季节性，较低的营业额确实会导致较高的成本，但影响是轻微的，不应该由<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BA%B3%E7%A8%8E%E4%BA%BA.md#1">纳税人</a>来买单。</span></p>
 <p><span style="font-weight: 400;">他说，肉类行业收入应该与去年持平，并且还可能大大超过去年。</span></p>
 <h2>未获得补贴的企业如是说</h2>
 <p><span style="font-weight: 400;">该行业中一些规模较大的企业（共有大约22,000名员工）没有申请工资补贴，这其中包括Affco ，Greenlea 和Hellaby ，它们的雇员超过6000名。</span></p>
@@ -46,42 +46,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12044918.md#1">【瘟疫与中共】死亡率高 郁金香王国受重创</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12045750.md#1">瘟疫所致 度假屋进入长期租赁市场</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12045779.md#1">澳警新州水域截获逾吨冰毒 价值7.5亿澳元</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12045791.md#1">经济学家警告：封锁期间失业率将“飙升”</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12046026.md#1">纽总理 ：本周结束全国封锁国家将进入 3 级警报</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12046064.md#1">实际感染人数可能超官方数据85倍</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12046086.md#1">美国杂志 ：纽总理可能是防疫最高效的领导人</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12047356.md#1">专家担心幼儿会成为中共病毒携带者</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12047369.md#1">卫生部向间谍机构GCSB咨询接触者追踪</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/21/n12049017.md#1">新西兰政府对香港抓捕民主人士表示失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12044918.md#1">【瘟疫与中共】郁金香王国为何受重创</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12045750.md#1">瘟疫所致 度假屋进入长期租赁市场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12045779.md#1">澳警新州水域截获逾吨冰毒 价值7.5亿澳元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12045791.md#1">经济学家警告：封锁期间失业率将“飙升”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12046026.md#1">纽总理 ：本周结束全国封锁国家将进入 3 级警报</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12046064.md#1">实际感染人数可能超官方数据85倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12046086.md#1">美国杂志 ：纽总理可能是防疫最高效的领导人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12047356.md#1">专家担心幼儿会成为中共病毒携带者</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/20/n12047369.md#1">卫生部向间谍机构GCSB咨询接触者追踪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691514.md#1">若执政 行动党承诺冻结最低薪 取消新福利</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196827.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(3)</a></li><li><a href="https://github.com/uszn2172/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/26/n10089507.md#1" target="_blank">共产暴政录：“破四旧”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/18/n12041829.md#1">台湾约20万人至染疫海军停留点 收到警示简讯</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12045614.md#1">【内幕】危及习近平 孙力军案堪比周永康</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12043496.md#1">公安部副部长 前610副主任孙力军落马</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12043760.md#1">【独家】各地秘密培训 中共层层瞒疫情</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12043834.md#1">【全球疫情直击】陆多地告急 二次爆发伴黑死病</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12044473.md#1">Lady Gaga吹捧谭德赛是巨星 网友批脑袋卡卡</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/18/n12042304.md#1">居家隔离抗疫 李连杰小女儿自曝抑郁症复发</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/20/n12046904.md#1">卡卡捧谭德塞遭批 其母亲与WHO关系被起底</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12043178.md#1">怕狗的人收养怕人的狗 结局感动人和狗</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12044281.md#1">漫威《上气》导演晒合照 梁朝伟以新发型亮相</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/12/n12025238.md#1">【历史上的瘟疫】打垮拿破仑的重型瘟疫</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12043793.md#1">迷于幻境之中 修道人一念之间功亏一篑</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/3/25/n11974925.md#1">【品读宋词】一双《钗头凤》 见证古人深情</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/14/n12029632.md#1">重读希腊神话《帕里斯的裁判》：我们忽略了谁？</a></li>
-<li><a href="https://github.com/uszn2172/djy/blob/master/gb/20/4/19/n12043540.md#1">【历史回眸】清末多灾 报纸讲真话 促变局</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uszn2172/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uszn2172/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/21/n12049061.htm">工资补贴是否被滥用</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/21/n12049061.htm">工资补贴是否被滥用</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/uszn2172/djy/blob/master/gb/20/4/21/n12049061.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uszn2172/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uszn2172/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uszn2172/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uszn2172/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uszn2172/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/4/21/n12049061.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
